--- a/LINE_RWD/css/style.css
+++ b/LINE_RWD/css/style.css
@@ -87,6 +87,336 @@ a {
   text-align: right;
 }
 
+.banner-module {
+  min-width: 100%;
+  margin-top: 80px;
+  -webkit-animation: round 5s infinite alternate;
+          animation: round 5s infinite alternate;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-size: cover;
+  background-color: black;
+}
+
+@-webkit-keyframes round {
+  0% {
+    background-image: url("/img/mv01.jpg");
+  }
+  100% {
+    background-image: url("/img/mv02.jpg");
+  }
+}
+
+@keyframes round {
+  0% {
+    background-image: url("/img/mv01.jpg");
+  }
+  100% {
+    background-image: url("/img/mv02.jpg");
+  }
+}
+
+.Content {
+  color: white;
+  position: relative;
+  height: 550px;
+}
+
+p.Ctext:nth-child(1) {
+  display: block;
+  font-size: 140px;
+  font-weight: bolder;
+  margin: 200px 0 0 0;
+}
+
+p.Ctext:nth-child(2) {
+  display: block;
+  font-size: 40px;
+  padding-left: 8px;
+}
+
+.downbtn {
+  position: absolute;
+  left: 10px;
+  bottom: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 270px;
+}
+
+.dDLine {
+  width: 250px;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 8px;
+}
+
+.dDLine img {
+  height: 20px;
+}
+
+.dDLine p {
+  margin: 5px;
+}
+
+i.fa-download {
+  display: none;
+}
+
+a.btn {
+  width: 54px;
+  height: 54px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px solid white;
+  color: white;
+  border-radius: 5px;
+  margin: 1px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+a.btn:hover {
+  background-color: limegreen;
+}
+
+a.btn:hover .fa-apple {
+  display: none;
+}
+
+a.btn:hover .fa-google-play {
+  display: none;
+}
+
+a.btn:hover .fa-desktop {
+  display: none;
+}
+
+a.btn:hover .fa-download {
+  display: inline;
+}
+
+.scroll {
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 130px;
+  font-size: 14px;
+}
+
+.scrollmove {
+  height: 10px;
+}
+
+.scroll p {
+  -webkit-animation: scrollUpdown 2s infinite alternate linear;
+          animation: scrollUpdown 2s infinite alternate linear;
+}
+
+@-webkit-keyframes scrollUpdown {
+  0% {
+    padding-top: 0px;
+  }
+  100% {
+    padding-top: 10px;
+  }
+}
+
+@keyframes scrollUpdown {
+  0% {
+    padding-top: 0px;
+  }
+  100% {
+    padding-top: 10px;
+  }
+}
+
+.linem {
+  height: 125px;
+  position: relative;
+}
+
+.line {
+  position: absolute;
+  left: 50%;
+  width: 2px;
+  margin: auto;
+  background-color: white;
+  -webkit-animation: Drop 1.2s infinite linear;
+          animation: Drop 1.2s infinite linear;
+}
+
+@-webkit-keyframes Drop {
+  0% {
+    top: 0;
+    height: 5px;
+  }
+  33% {
+    top: 10%;
+    height: 20px;
+  }
+  66% {
+    top: 50%;
+    height: 50px;
+  }
+  100% {
+    top: 100%;
+    height: 0px;
+  }
+}
+
+@keyframes Drop {
+  0% {
+    top: 0;
+    height: 5px;
+  }
+  33% {
+    top: 10%;
+    height: 20px;
+  }
+  66% {
+    top: 50%;
+    height: 50px;
+  }
+  100% {
+    top: 100%;
+    height: 0px;
+  }
+}
+
+.LifeOnLine {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+}
+
+.LifeOnLine .container {
+  padding: 30px 20px;
+  position: relative;
+}
+
+.LifeOnLine .item {
+  padding-bottom: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.LifeOnLine .item img.xs {
+  width: 100%;
+}
+
+.gridLine {
+  width: 1px;
+  height: calc(100% - 80px);
+  border-left: 1px dashed #757475;
+  position: absolute;
+  top: 80px;
+  left: 38px;
+  z-index: -1;
+}
+
+.infoblock {
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.infoblock img {
+  width: 36px;
+  height: 36px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 10px;
+}
+
+.text {
+  margin-top: 30px;
+}
+
+.text h3 {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.text p {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-bottom: 28px;
+}
+
+.text h3 + p {
+  color: #00c300;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.downloadapp a {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 14px;
+  font-weight: bold;
+  border: 1px solid #757475;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+.downloadapp a.infoapp {
+  display: none;
+}
+
+.pic {
+  display: none;
+}
+
 .software-container-module {
   width: 100%;
   background-color: #eee;
@@ -142,7 +472,7 @@ a {
 }
 
 .business-banner a {
-  background-image: url("/LINE_RWD/img/inc-sites-banner.png");
+  background-image: url("/img/inc-sites-banner.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: inline-block;
@@ -284,6 +614,16 @@ a {
     width: 100%;
     text-align: center;
   }
+  p.Ctext:nth-child(1) {
+    display: block;
+    font-size: 50px;
+    font-weight: bolder;
+  }
+  p.Ctext:nth-child(2) {
+    display: block;
+    font-size: 20px;
+    padding-left: 8px;
+  }
   .software-container-module {
     width: 100%;
     background-color: #eee;
@@ -325,6 +665,12 @@ a {
     font-size: 14px;
     margin: 20px;
     color: #666;
+  }
+  .footer-bar-module .footerlink {
+    display: none;
+  }
+  .footer-bar-module .userTerms {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
