--- a/LINE_RWD/css/style.css
+++ b/LINE_RWD/css/style.css
@@ -107,19 +107,19 @@ a {
 
 @-webkit-keyframes round {
   0% {
-    background-image: url("/img/mv01.jpg");
+    background-image: url("../img/mv01.jpg");
   }
   100% {
-    background-image: url("/img/mv02.jpg");
+    background-image: url("../img/mv02.jpg");
   }
 }
 
 @keyframes round {
   0% {
-    background-image: url("/img/mv01.jpg");
+    background-image: url("../img/mv01.jpg");
   }
   100% {
-    background-image: url("/img/mv02.jpg");
+    background-image: url("../img/mv02.jpg");
   }
 }
 
@@ -472,7 +472,7 @@ a.btn:hover .fa-download {
 }
 
 .business-banner a {
-  background-image: url("/img/inc-sites-banner.png");
+  background-image: url("img/inc-sites-banner.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: inline-block;
@@ -665,6 +665,9 @@ a.btn:hover .fa-download {
     font-size: 14px;
     margin: 20px;
     color: #666;
+  }
+  .business-banner a h2 {
+    font-size: 28px;
   }
   .footer-bar-module .footerlink {
     display: none;
