--- a/LINE_RWD/css/style.scss
+++ b/LINE_RWD/css/style.scss
@@ -368,7 +368,7 @@ a.btn:hover .fa-download {
     width: 100%;
     margin: auto;
     a {
-        background-image: url("img/inc-sites-banner.png");
+        background-image: url("../img/inc-sites-banner.png");
         background-repeat: no-repeat;
         background-size: cover;
         display: inline-block;
