--- a/LINE_RWD/css/style.scss
+++ b/LINE_RWD/css/style.scss
@@ -98,7 +98,7 @@ p.Ctext:nth-child(1) {
     display: block;
     font-size: 140px;
     font-weight: bolder;
-    margin: 200px 0 0 0; 
+    margin: 200px 0 0 0;
 }
 
 p.Ctext:nth-child(2) {
@@ -135,7 +135,6 @@ p.Ctext:nth-child(2) {
 i.fa-download {
     display: none;
 }
-
 
 a.btn {
     width: 54px;
@@ -230,6 +229,63 @@ a.btn:hover .fa-download {
     100% {
         top: 100%;
         height: 0px;
+    }
+}
+
+.LifeonLINE-module {
+    margin: 5px;
+    .title {
+        h3 {
+            text-align: center;
+            font-size: 50px;
+        }
+        p {
+            text-align: center;
+            color: #666;
+        }
+    }
+    .wrap-module {
+        width: 100%;
+        margin: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        .col {
+            width: calc(50% -10px);
+            img.iconpic {
+                margin-top: 55px;
+                width: 80px;
+                border: 1px solid #666;
+                border-radius: 15px;    
+                
+            }
+            img.mainpic {
+                height: 463px;
+                margin-left:-124px ;
+            }
+            h3{
+                margin: 5px;
+            }
+            span{
+                margin: 5px;
+                color: limegreen;
+            }
+            p{
+                margin: 5px;
+            }
+            a{
+                line-height: 50px;
+                display: block;
+                width: 120px;
+                height: 50px;
+                border: 1px solid black;
+                border-radius: 5px;
+
+            }
+            &:nth-child(odd) {
+                margin-left: 150px;
+                border-right: 1px dashed #666 ;
+            }
+        }
     }
 }
 
@@ -399,7 +455,7 @@ a.btn:hover .fa-download {
         font-size: 50px;
         font-weight: bolder;
     }
-    
+
     p.Ctext:nth-child(2) {
         display: block;
         font-size: 20px;
@@ -457,7 +513,7 @@ a.btn:hover .fa-download {
         .footerlink {
             display: none;
         }
-        .userTerms{
+        .userTerms {
             display: block;
         }
     }
